--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-webhook = "1.0.0"
-clap = "3.0.13"
+serenity = "0.10"
+clap = "3.0"
+dirs = "4.0"
+serde = "1.0"
+serde_yaml = "0.8"
+futures = "0.3"
