--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 serenity = { version = "0.10", features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"], default-features = false }
 clap = "3.0"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 serde_yaml = "0.8"
 futures = "0.3"
 dirs = "4.0"
